layout/painting/DisplayListClipState.cpp
@@ -106,6 +106,7 @@ void DisplayListClipState::ClipContentDescendants(
 
 void DisplayListClipState::InvalidateCurrentCombinedClipChain(
     const ActiveScrolledRoot* aInvalidateUpTo) {
+  mClippedToDisplayPort = false;
   mCurrentCombinedClipChainIsValid = false;
   while (mCurrentCombinedClipChain &&
          ActiveScrolledRoot::IsAncestor(aInvalidateUpTo,
